[#394] Handle reflective access to javax.management.modelmbean.RequiredModelMBean as gently as possible